# embedded-example

./: .gitignore  CMakeLists.txt  README.md  cifuzz.yaml  fuzztest.cpp
src/: CMakeLists.txt  mocks.c
src/crypto/: crypto_1.c
src/gps/: gps_1.c
